# vcontrold

./: README.md  vcontrold.sln
vcontrold/: Makefile.am  arithmetic.c  arithmetic.cpp  arithmetic.h  common.c  common.cpp  common.h  configure  configure.ac  conversion.cpp  conversion.h  framer.c  framer.cpp  framer.h  io.c  io.cpp  io.h  optolink.cpp  optolink.h  parser.c  parser.cpp  parser.h  prompt.h  socket.c  socket.cpp  socket.h  unit.c  unit.cpp  unit.h  vcontrold.c  vcontrold.cpp  vcontrold.vcxproj  xmlconfig.c  xmlconfig.cpp  xmlconfig.h
xml-32/xml_p300/: vcontrold.xml  vito.xml
